# game-of-life

./: .gitignore  README.md  pyproject.toml
GameOfLife/: __init__.py  main.py  matrix.py  terminal.py
game_of_life/: main.py  matrix.py  terminal.py
tests/: matrix_test.py
