[project]
name="game_of_life"
version="1.0.0"
requires-python = ">= 3.12"
description = "game of life in terminal with python"
readme = "README.md"
license = "GPL-3.0-or-later"

dependencies=[
]

[project.optional-dependencies]
dev=[
    "pytest"
]

[project.scripts]
gol = "game_of_life.main:main"

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = ["E", "F", "B","A","Q","UP","N","C4"]